# g19daemon

./: .gitignore  .gitmodules  .kdev_include_paths  CMakeLists.txt  Changelog.md  README.md  g19deamon.kdev4  mb.sh
.github/workflows/: build.yml  debianFile.yml  rpmFile.yml
.kdev4/: g19deamon.kdev4  rpidaemon.kdev4
debian/: changelog  control  copyright  files  rules
g19daemon.git/: config  packed-refs
helper/plugin_template/: .gitignore  CMakeLists.txt  icon.hpp  main.cpp  menu_icon.hpp  plugin_template.cpp  plugin_template.hpp  plugin_template.kdev4
helper/plugin_template/.kdev4/: plugin_template.kdev4
release/: CMakeCache.txt  Config.h  Makefile  cmake_install.cmake  compile_commands.json
release/src/plugins/backlight/: Makefile  cmake_install.cmake
release/src/plugins/helloworld/: Makefile  cmake_install.cmake
release/src/plugins/keybacklight/: Makefile  cmake_install.cmake
release/src/plugins/mpris/: Makefile  cmake_install.cmake
release/src/plugins/pavolume/: Makefile  cmake_install.cmake
src/: 80-hid-g19.rules  config.h.in  g19daemon.cpp  g19daemon.desktop  g19daemon.hpp  g19daemon.qrc  g19daemon.ui  g19device.cpp  g19device.hpp  gscreen.cpp  gscreen.hpp  hdata.hpp  main.cpp  plugininterface.hpp
src/plugins/: .gitignore  plugin_template
src/plugins/backlight/: CMakeLists.txt  backlight.cpp  backlight.hpp  backlight.qrc
src/plugins/clock/: CMakeLists.txt  clock.cpp  clock.hpp  clock.qrc
src/plugins/hardwaremonitor/: CMakeLists.txt  Defines.cpp  Defines.h  HwaSettings.cpp  HwaSettings.h  hardwaremonitor.cpp  hardwaremonitor.cpp.autosave  hardwaremonitor.hpp  hardwaremonitor.qrc  qrc_hardwaremonitor.cpp
src/plugins/hardwaremonitor/Screen/: GraphScreen.cpp  GraphScreen.h  LegendScreen.cpp  LegendScreen.h  NormalScreen.cpp  NormalScreen.h  Screen.cpp  Screen.h  StartScreen.cpp  StartScreen.h
src/plugins/hardwaremonitor/Tools/: Data.cpp  Data.h  MonitorTool.cpp  MonitorTool.h  commandtool.cpp  commandtool.h  influxdb.cpp  influxdb.h
src/plugins/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.hpp  helloworld.qrc
src/plugins/keybacklight/: CMakeLists.txt  keybacklight.cpp  keybacklight.hpp  keybacklight.qrc
src/plugins/mpris/: CMakeLists.txt  mpris.cpp  mpris.hpp  mpris.qrc  mprisfetcher2.cpp  mprisfetcher2.hpp
src/plugins/pavolume/: .pavolume.hpp.swp  CMakeLists.txt  pavolume.cpp  pavolume.hpp  pavolume.qrc
